snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.pom.sha512
3e41241c7c5f0b82db648dfcf554262edd455efec1428e1ab2f827a55596c7c642c6896c6fe81c004398106d85f1c7d90c20f64b36373cbbfb7f378f2a4268c1